# private-zikade

./: backend.go  backend_provider.go  config.go  datastore_tracer.go  dht.go  go.mod  go.sum  handlers.go  handlers_test.go  helpers_test.go  router.go  routing.go  routing_test.go  runner.sh  stream.go
internal/coord/: coordinator.go  topo_test.go
internal/coord/routing/: probe.go
internal/nettest/: 2024-01-25T17:07_crawl.json  2024-01-25T17:07_crawl_properties.json  layouts.go  norm-routing.go
pb/: msg.aux.go  msg.pb.go  msg.proto
pir/: README.md  basic_paillier.go  basic_paillier_test.go  benchmarking_test.go  pir.go  simple_rlwe.go  simple_rlwe_helpers.go  simple_rlwe_test.go
pir/bins/: README.md  script.cpp  simulation-paillier.csv  simulation.csv
pir/whispir/: CMakeLists.txt  README.md  main.cpp
private_routing/: README.md  helpers.go  pir_client.go  pir_client_interfaces.go  pir_interfaces.go
